WIP: Fix opening of databases i) on startup, ii) using File > Open
- i: Reuse OpenDataBaseAction (instead of code duplication)
- ii: Remove double initialization of BackupManager